--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -49,7 +49,7 @@ Publication City: {{volume.published_city}}</p>
  {% for value in user_annotation_count %}
  {% if volume.pid in value %}
  {% if "0" not in value|safe|slice:"-3:-1" %}
- Anno: {{ value|safe|slice:"-3:-1" }}
+ <button style="background-color:green;color:white;"> {{ value|safe|slice:"-3:-1" }} </button>
  {% endif %}
  {% endif %}
  {% endfor %}
