--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -881,6 +881,12 @@ p {
   opacity: 1;
 }
 
+.rx-label-copy:active {
+  background-color: #C0660D !important;
+  border: 1px solid #C0660D !important;
+  opacity: 1;
+}
+
 ::selection {
   background-color: #707070;
 }
@@ -910,6 +916,12 @@ p {
 
 .rx-flex {
   display: flex;
+}
+
+.rx-tooltip-hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 2s, opacity 2s linear;
 }
 
 .mirador-container .manifest-info {
@@ -989,4 +1001,27 @@ p {
 
 .rx-fieldset {
   border: none;
+}
+
+.rx-search-result {
+  font-size: 14px;
+}
+
+.rx-search-result a {
+  color: #ea7c0f !important;
+  opacity: 0.7;
+}
+
+.rx-search-result a:hover {
+  color: #ea7c0f !important;
+  opacity: 1;
+  -webkit-transition: opacity 150ms ease-in-out;
+  -moz-transition: opacity 150ms ease-in-out;
+  -ms-transition: opacity 150ms ease-in-out;
+  -o-transition: opacity 150ms ease-in-out;
+}
+
+.uk-tab>.uk-active>a {
+  border-color: #ea7c0f !important;
+  color: #ea7c0f;
 }
