Mirador fix (mostly) and ading version number. Change URL for user annotations to be consistiant to other lists.

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -72,9 +72,9 @@
 }
 
 .openseadragon-container span {
-    background: rgba(0, 255, 255, 0.33);
-    /* color: transparent; */
-    color: deeppink;
+    /* background: rgba(0, 255, 255, 0.33); */
+    color: transparent;
+    /* color: deeppink; */
     display: inline-flex !important;
     font-size: 100%;
     line-height: initial;
