prepare to add style to email activation status

--- a/apps/templates/account/email.html
+++ b/apps/templates/account/email.html
@@ -49,9 +49,9 @@
                 value="{{emailaddress.email}}" />
               {{ emailaddress.email }}
               {% if emailaddress.verified %}
-              <span class="verified">{% trans "Verified" %}</span>
+              <span class="verified rx-email-status">{% trans "Verified" %}</span>
               {% else %}
-              <span class="unverified">{% trans "Unverified" %}</span>
+              <span class="unverified rx-email-status">{% trans "Unverified" %}</span>
               {% endif %}
               {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
             </label>
