update user object on user email page

--- a/apps/templates/account/email.html
+++ b/apps/templates/account/email.html
@@ -17,14 +17,14 @@
       <li class="rx-breadcrumb-item">E-mail Update</li>
     </ul>
     <div class="rx-title">
-      {% if object.name %}
-      Hello, {{ object.name }}!
+      {% if user.name %}
+      Hello, {{ user.name }}!
       {% else %}
       Hello!
       {% endif %}
     </div>
     <div class="rx-title-tagline">
-      {{ object.username }}
+      {{ user.username }}
     </div>
   </div>
 </div>
