--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -368,17 +368,17 @@ header#page-bg .collection-image-info.collasped .info {
 #wrap {
   overflow: hidden;
 }
-#box {
+.box {
   width: 25%;
   padding-bottom: 25%;
   position: relative;
   float: left;
 }
-#box a img {
+.box a img {
   width: 100%;
   overflow: hidden;
 }
-#boxInner {
+.boxInner {
   position: absolute;
   left: 0;
   right: 0;
@@ -386,7 +386,7 @@ header#page-bg .collection-image-info.collasped .info {
   bottom: 0;
   overflow: hidden;
 }
-#boxInnerb {
+.boxInnerb {
   position: absolute;
   left: 0;
   right: 0;
@@ -395,19 +395,19 @@ header#page-bg .collection-image-info.collasped .info {
   #max-height: 225px;
   overflow: hidden;
 }
-#boxInner img {
+.boxInner img {
   #-webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
   #filter: blur(2px);
   width: 100%;
 }
 
-#boxInnerb img {
+.boxInnerb img {
   #-webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
   #filter: blur(2px);
   width: 100%;
 }
 
-#innerContent {
+.innerContent {
   position: absolute;
   left: 10px;
   right: 10px;
@@ -419,28 +419,28 @@ header#page-bg .collection-image-info.collasped .info {
   opacity: 0;
 }
 
-#innerContent:hover {
+.innerContent:hover {
   opacity: 1;
 }
 
-#innerContent p {
+.innerContent p {
   text-align: center;
   background: rgba(255, 255, 255, 0.7);
   color: #4f4f4f;
   border-radius: 15px;
 }
 
-#innerContent p em {
+.innerContent p em {
   color: black;
 }
 
-#innerContent a {
+.innerContent a {
   color: black;
   #background: rgba(255, 255, 255, 0.7);
   text-decoration: underline;
 }
 
-#innerContentb {
+.innerContentb {
   position: absolute;
   left: 10px;
   right: 10px;
@@ -450,7 +450,7 @@ header#page-bg .collection-image-info.collasped .info {
   color: black;
 }
 
-#innerContentc {
+.innerContentc {
   position: absolute;
   left: 10px;
   right: 10px;
@@ -460,18 +460,18 @@ header#page-bg .collection-image-info.collasped .info {
   color: black;
 }
 
-#innerContentb h2 {
+.innerContentb h2 {
   text-align: center;
   background: rgba(255, 255, 255, 0.7);
   color: #4f4f4f;
   border-radius: 15px;
 }
 
-#innerContentb h2 em {
+.innerContentb h2 em {
   color: black;
 }
 
-#innerContentb a {
+.innerContentb a {
   color: black;
   #background: rgba(255, 255, 255, 0.7);
   text-decoration: underline;
@@ -978,7 +978,9 @@ p {
 .rx-volume-na {
   /* border: 1px solid #afafaf; */
   background: #fff1e4;
-  padding: 1em 0;
+  padding: 1em;
+  font-size: 14px;
+  color: #ea7c0f;
 }
 
 .rx-nav-item.uk-active {
