--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -40,7 +40,7 @@
       <div class="uk-width-1-2@m uk-grid-medium">
         <div class=" uk-width-1-4@m rx-volume-image">
           <a class="nav-link" href="#">
-            <img src='{% static 'images/image_not_found.jpg' %}' />
+            <v-volume-image></v-volume-image>
           </a>
         </div>
         <div class="uk-width-3-4@m">
@@ -61,10 +61,15 @@
     <div class="uk-width-1-2@m uk-grid-medium">
       <div class=" uk-width-1-4@m rx-volume-image">
         <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-          {% for canvas in volume.canvas_set.all %}{% if canvas.is_starting_page == 1 %}<img
-            src="{{ canvas.thumbnail }}" {% elif forloop.last %}<img src="{{ volume.canvas_set.first.thumbnail }}"
-            {% endif %}{% endfor %} alt="First page of {{volume.label}}"
-            onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';" />
+          {% for canvas in volume.canvas_set.all %}
+            {% if canvas.is_starting_page == 1 %}
+              <v-volume-image img-src="{{ canvas.thumbnail }}" volume-label="First page of {{volume.label}}">
+              </v-volume-image>
+            {% elif forloop.last %}
+              <v-volume-image img-src="{{ volume.canvas_set.first.thumbnail }}" volume-label="First page of {{volume.label}}">
+              </v-volume-image>
+            {% endif %}
+          {% endfor %}
         </a>
       </div>
       <div class="uk-width-3-4@m">
